# ha-easycare-bywaterair

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  hacs.json  pyproject.toml
.github/workflows/: hassfest.yml  lint.yml  release.yml  tests.yml
custom_components/easycare_bywaterair/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  light.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  update.py
custom_components/easycare_bywaterair/api/: __init__.py  auth.py  client.py  exceptions.py  models.py
custom_components/easycare_bywaterair/translations/: en.json  fr.json
tests/: conftest.py  helpers.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_init.py  test_light.py  test_number.py  test_select.py  test_sensor.py  test_update.py
tests/api/: conftest.py  test_client.py  test_exceptions.py  test_models.py
tests/fixtures/: api_bpc_programs.json  api_bpc_status.json  api_firmware_update.json  api_get_user.json  api_get_user_modules.json  api_pool_status.json
