[project]
name = "ha-easycare-bywaterair"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "freezegun>=1.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Sur Linux/Mac (CI) : pytest tests/
# Sur Windows (tests unitaires purs) : pytest tests/api/ -p no:homeassistant
# Le plugin homeassistant+pytest-socket est incompatible avec ProactorEventLoop Windows.

[tool.coverage.run]
source = ["custom_components/easycare_bywaterair"]
omit = ["tests/*"]

[tool.coverage.report]
# fail_under = 80  # À réactiver quand les tests HA (coordinator, config_flow) seront validés en CI
